--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,4 +9,8 @@
   <br>
   <a class="login" href="/auth/trade/login">Trade Login</a>
 
+
+
+  <a href="/auth/retail/signup">Sign up Retial User</a>
+
   <%- include('./partials/html_end.ejs') %>
