--- a/views/signupRetail.ejs
+++ b/views/signupRetail.ejs
@@ -24,7 +24,7 @@
 
         <div class="form-group">
             <label for="userEmail">Email address*</label>
-            <span> <input type="email" class="form-control" id="userEmail" placeholder="Enter an email"> </span>
+            <span> <input type="text" class="form-control" id="userEmail" placeholder="Enter an email"> </span>
         </div>
 
         <div class="form-group">
@@ -36,7 +36,8 @@
         <div class="d-flex">
             <div class="form-group">
                 <label for="phoneNumber">Phone number</label>
-                <input type="string" class="form-control" id="phoneNumber" placeholder="Enter a phone number">
+                <input type="string" class="form-control" id="phoneNumber" placeholder="Enter a phone number"
+                    onkeypress="return isNumberKey(event)">
             </div>
 
             <div class="form-group">
@@ -53,7 +54,17 @@
 
 </div>
 
+
 <script>
+
+    //phone number numerical data validation
+    function isNumberKey(evt) {
+        var charCode = (evt.which) ? evt.which : evt.keyCode
+        if (charCode > 31 && (charCode < 48 || charCode > 57))
+            return false;
+        return true;
+    }
+
     $('#DOB').daterangepicker({
         singleDatePicker: true,
         showDropdowns: true,
@@ -71,16 +82,22 @@
         var passkey = $('#passkey').val()
         var phoneNumber = $('#phoneNumber').val()
         var DOB = $('#DOB').val()
-        
+
         console.log('gender: ', gender);
         console.log('firstName: ' + firstName)
         console.log('DOB: ', DOB);
+        console.log('userEmail: ', userEmail);
 
+
+        //empty field validation
         if (($('#firstName').val() == '') || ($('#lastName').val() == '') || ($('#userEmail').val() == '') || ($('#passkey').val() == '') || ($('#phoneNumber').val() == '') || ($('#DOB').val() == '')) {
             alert("ERROR: Empty field(s).");
         }
+        //email format validation
+        else if (validator.isEmail(String(userEmail)) == false) { alert("Invalid Email Address!"); }
 
         else {
+
             $.ajax(
                 {
                     url: "/auth/retail/signup",
