CRUD implementation for Products

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,10 @@
   <a class="login" href="/auth/trade/login">Trade Login</a>
 
   <br>
-  <a class="signup" href="/auth/retail/signup">Sign up Retial User</a>
+  <a class="signup" href="/auth/retail/signup">Sign up Retail User</a>
+  <br>
+  <a class="signup" href="/auth/trade/signup">Sign up Trade User</a>
+  <br>
+  <a class="products" href="/admin/products">Products Detail</a>
 
   <%- include('./partials/html_end.ejs') %>
