--- a/views/signupRetail.ejs
+++ b/views/signupRetail.ejs
@@ -19,18 +19,18 @@
 
         <div class="form-group">
             <label for="lastName">Last name</label>
-            <span> <input type="text" class="form-control" id="lastName" placeholder="Enter your last name"> </span>
+               <input type="text" class="form-control" id="lastName" placeholder="Enter your last name">   
         </div>
 
         <div class="form-group">
             <label for="userEmail">Email address*</label>
-            <span> <input type="text" class="form-control" id="userEmail" placeholder="Enter an email"> </span>
+               <input type="text" class="form-control" id="userEmail" placeholder="Enter an email">   
         </div>
 
         <div class="form-group">
             <label for="passkey">Password*</label>
-            <span> <input type="password" class="form-control" id="passkey" placeholder="Enter a unique password">
-            </span>
+               <input type="password" class="form-control" id="passkey" placeholder="Enter a unique password">
+              
         </div>
 
         <div class="form-group">
@@ -52,10 +52,10 @@
             </div>
         </div>
 
-        <span>
-            <a href="account-already">Already have an account?</a>
+          
+            <a href="/auth/retail/login">Already have an account?</a>
             <button type="submit" class="submit_btn">Create account -></button>
-        </span>
+          
     </form>
 
 </div>
