--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,17 +3,17 @@
   <h1><%= title %></h1>
   <p>Welcome to <%= title %></p>
 
-  <a class="login" href="/auth/admin/login">Admin Login</a>
+  <a class="url login" href="/auth/admin/login">Admin Login</a>
   <br>
-  <a class="login" href="/auth/retail/login">Retail Login</a>
+  <a class="url login" href="/auth/retail/login">Retail Login</a>
   <br>
-  <a class="login" href="/auth/trade/login">Trade Login</a>
+  <a class="url login" href="/auth/trade/login">Trade Login</a>
 
   <br>
-  <a class="signup" href="/auth/retail/signup">Sign up Retail User</a>
+  <a class="url signup" href="/auth/retail/signup">Sign up Retail User</a>
   <br>
-  <a class="signup" href="/auth/trade/signup">Sign up Trade User</a>
+  <a class="url signup" href="/auth/trade/signup">Sign up Trade User</a>
   <br>
-  <a class="products" href="/admin/products">Products Detail</a>
+  <a class="url products" href="/admin/products">Products Detail</a>
 
   <%- include('./partials/html_end.ejs') %>
