--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,7 +6,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <% if ( type == "retail" ) { %>
+    <% if ( type=="retail" ) { %>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/retail/">Home<span class="sr-only">(current)</span></a>
@@ -19,23 +19,43 @@
         </li>
       </ul>
       <% } %>
-      <div class="dropdown-menu dropdown-menu-right">
-        <% if(type === 'retail') { %>
-        <a href="/retail/profile" class="dropdown-item has-icon">
-            <i class="far fa-user"></i> Profile
-        </a>
-        <% } else if(type === 'trade') { %>
-        <a href="/trade/profile" class="dropdown-item has-icon">
-            <i class="far fa-user"></i> Profile
-        </a>
-        <% }else if(type === 'admin'){ %>
-        <a href="/admin/profile" class="dropdown-item has-icon">
-            <i class="far fa-user"></i> Profile
-        </a>
-        <% }%>
-        <a href="/logout" class="dropdown-item has-icon text-danger">
-            <i class="fas fa-sign-out-alt"></i> Logout
-        </a>
-    </div>
+        <% if(type==='retail' ) { %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a href="/logout" class="dropdown-item has-icon text-danger">
+                <i class="fas fa-sign-out-alt"></i> Logout
+              </a>
+            </div>
+          </li>
+          <% } else if(type==='trade' ) { %>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a href="/logout" class="dropdown-item has-icon text-danger">
+                  <i class="fas fa-sign-out-alt"></i> Logout
+                </a>
+              </div>
+            </li>
+            <% }else if(type==='admin' ){ %>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a href="/logout" class="dropdown-item has-icon text-danger">
+                    <i class="fas fa-sign-out-alt"></i> Logout
+                  </a>
+                </div>
+              </li>
+              <% }%>
+
   </div>
 </nav>
