--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,1 +1,9 @@
-<h1>ADMIN logged in</h1>
+<%- include('../partials/html_start.ejs') %>
+
+    <div class="container-fluid product_page mx-5">
+
+        <a class="products" href="/admin/productdetail">Products Detail</a>
+
+    </div>
+
+    <%- include('../partials/html_end.ejs') %>
