--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,19 @@
   <a class="login" href="/auth/retail/login">Retail Login</a>
   <br>
   <a class="login" href="/auth/trade/login">Trade Login</a>
-
   <br>
   <a class="signup" href="/auth/retail/signup">Sign up Retail User</a>
   <br>
   <a class="signup" href="/auth/trade/signup">Sign up Trade User</a>
   <br>
-  <a class="products" href="/admin/products">Products Detail</a>
+
+  <% for(let i = 0; i<10; i++){ %>
+    <p>hello <%= i %> </p>
+
+  <%  }%>
+
 
   <%- include('./partials/html_end.ejs') %>
+
+
+  
