--- a/views/partials/html_end.ejs
+++ b/views/partials/html_end.ejs
@@ -1,3 +1,23 @@
 </body>
 
+<script>
+    //phone number numerical data validation
+    function isNumberKey(evt) {
+        var charCode = (evt.which) ? evt.which : evt.keyCode
+        if (charCode > 31 && (charCode < 48 || charCode > 57))
+            return false;
+        return true;
+    }
+
+    // Date of birth calender
+    $('#DOB').daterangepicker({
+        singleDatePicker: true,
+        showDropdowns: true,
+        locale: {
+            format: 'DD/MM/YYYY'
+        }
+    });
+
+</script>
+
 </html>
