--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,10 +1,13 @@
 <%- include('./partials/html_start.ejs') %>
 
-  <!-- <link rel="stylesheet" href="/stylesheets/signupTrade.css"> -->
-
   <div class="container-fluid product_page mx-5">
 
     <h1>Products Detail</h1>
+    <a href="/admin/createproductget">Create Product</a>
+    <br>
+    <a href="/admin/showproductsget">Show All Products</a>
+    <br>
+    <a href="">Edit Product</a>
 
   </div>
 
